# ChangeLog for net-analyzer/hydra
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/hydra/ChangeLog,v 1.95 2015/05/15 12:13:44 pacho Exp $

  15 May 2015; Pacho Ramos <pacho@gentoo.org> hydra-8.1.ebuild:
  ppc stable wrt bug #548390

  13 May 2015; Agostino Sarubbo <ago@gentoo.org> hydra-8.1.ebuild:
  Stable for x86, wrt bug #548390

  12 May 2015; Agostino Sarubbo <ago@gentoo.org> hydra-8.1.ebuild:
  Stable for amd64, wrt bug #548390

  13 Mar 2015; Jeroen Roovers <jer@gentoo.org> -hydra-7.4.2.ebuild,
  -hydra-7.5.ebuild, -hydra-7.6.ebuild:
  Old.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> hydra-8.0.ebuild:
  Stable for ppc, wrt bug #516966

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org> hydra-7.4.2.ebuild,
  hydra-7.5.ebuild, hydra-7.6.ebuild, hydra-8.0.ebuild, hydra-8.1.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

*hydra-8.1 (09 Dec 2014)

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> +hydra-8.1.ebuild:
  Version bump.

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> hydra-7.4.2.ebuild,
  hydra-7.5.ebuild, hydra-7.6.ebuild, hydra-8.0.ebuild:
  Update PostgreSQL dependencies and/or checks to virtual/postgresql.

  09 Sep 2014; Chema Alonso <nimiux@gentoo.org> hydra-8.0.ebuild:
  Stable for amd64 wrt bug #516966

  08 Sep 2014; Jeroen Roovers <jer@gentoo.org> hydra-8.0.ebuild,
  +files/hydra-8.0-configure.patch:
  Fix net-fs/ncpfs automagic (partial fix for bug #521746).

  06 Sep 2014; Jeroen Roovers <jer@gentoo.org> hydra-8.0.ebuild:
  Override faulty libdir.

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> hydra-8.0.ebuild:
  x86 stable wrt bug #516966

*hydra-8.0 (18 May 2014)

  18 May 2014; Jeroen Roovers <jer@gentoo.org> +hydra-8.0.ebuild:
  Version bump.

*hydra-7.6 (11 Jan 2014)

  11 Jan 2014; Jeroen Roovers <jer@gentoo.org> +hydra-7.6.ebuild:
  Version bump (bug #497764 by Anton Bolshakov). Fix building against
  sys-libs/ncurses[tinfo].
