@@ -2,16 +2,14 @@
 Hash: SHA256
 
 AUX hydra-8.0-configure.patch 1089 SHA256 21e813cb4428c8e858086a3abe282cf95ea3d43afb3a5dfa53f634946a923e25 SHA512 d7fbc56b9d0fd6cc89ca689a07c0dcf618827bfaafb332217b695b38cc6382c32aedfec4c046575dc34c0946c9b0212a22d82554a296697d1b922ad45084a0bd WHIRLPOOL 57eded4d78362449f25bb314fa3107f2d20c4b42e689af42c7f4798ff342281d5ea41cfeebdd1b371bd8b5af64c947a1a41fdda5b5fefee0d76791795d4c5976
-DIST hydra-8.0.tar.gz 552415 SHA256 9fd3cb8f839767be7185e3c62642366d85bb9fec82fdf34d97d8a593c0b535c4 SHA512 07d74aca73bba4268ee8b7e791454eb7f1a80233c1b56735f8b6b8c611e6c8a7ee66644b945ecc116e730e08f6e9882d332e3e866eb52bc972e4de22ad9e35e4 WHIRLPOOL 24caeb7aa1bd48978aa1e6c6f5d46f44298ce5be501069bd38f2d50617464153da48a4bb0537d070f3fde5ee9e47dc964af2a636713eda21298a1c150034129c
 DIST hydra-8.1.tar.gz 559031 SHA256 e4bc2fd11f97a8d985a38a31785c86d38cc60383e47a8f4a5c436351e5135f19 SHA512 7608dd365865e5976bea446faedaad9f0334e7572fd0ee47a601c471471fc7c8a922c7114f4df08705b34b29144d3a6552e66148adf6b0f92c67301119c94959 WHIRLPOOL b1555fe1a8257c88f8f5c110fce1d06834eb6dadad394b61e2a90c3289b8fdd117944da160871003b1583aefb81a02d5c49a653e8de7d3adcd07917ae760c83c
-EBUILD hydra-8.0.ebuild 2335 SHA256 f4d31e46406e3c99ecf606aa200d57721c6c88114403ca2ed136dbcbc88aaa96 SHA512 34c5d9b2c6f0e00a892b07d0427e1e8cf9be970c786fcf03f5dfe880e0160626c8e0b15f8d5d24808e1c0c0c6f37cde4405c795d3a897c4d1ea54a297afe07a8 WHIRLPOOL 4d85fd5d7a215e00a5e654de220a8ae0a98a36fdc1a90f9cf77c3033f2e3bf8be6f01aadf5eabbad5b3f3305c4fad8058398f4e6f084efb05bfc0e66dba40223
 EBUILD hydra-8.1.ebuild 2342 SHA256 3484cd4485cb076fbebd01f9ea2e403d7d6c8678f42a1284992ed64cf275a491 SHA512 5007169ca099733541542079d5b19145c37df199b69c77b5908fbf81814ba7aae0d6f50c2e2403ce4b39b0324b1ac8dde9b09a947d812a14400776649be82db4 WHIRLPOOL 2e23857f92a73dab485a58c457ee85b86fe676cf59cac6bf6d29f7ddd10772df372779f3c74069f10bdd882878ad4d5412ab81049637060500c65cb255695f25
-MISC ChangeLog 12505 SHA256 e75b44496fd6b969dee57bf91ef0c0df0a35aa458c5c3d56e565f54e24f08fb1 SHA512 c15c23736e829f139c4d56162172b3dac99290b8167ee5fac393ebee87862dc705ecc694352799380337d02884615b1d120af3a4326426d25d75126697528f27 WHIRLPOOL d5b17a4698566a96d63387461501ac4ec1a1ac64d2586318c0e8fef64534ad5278671e98553ae64459c50cd1741dcec5e5943e094eb7f948d9a8425193b24430
+MISC ChangeLog 12577 SHA256 2168d253e7716ed146f28e413c2877a9f7d02fdf42fc072084b13caad913d167 SHA512 5c8bc0be1dc981ae4d56672a6b68dca5fc50d7c9ee88b30e94fb07fc53b2f7516b8b656ed4db66b5400ecede5acdc273fe876c37657fc6a02cb792d636fa8282 WHIRLPOOL dd59315ceb156fe19bfd6fd9bf7241c60285e8768e2936de6dceaeeda1ffe9d2c6b97687d26bc24ca79e2d6987717ae0585b83fdddf4a85715880eee5809a4fb
 MISC metadata.xml 325 SHA256 51ac19ac1cb61a0ee06bdbb7016d57609518824e153e51bd160ff1a4a74a4f26 SHA512 a23291b48b10877e604f3fc24beb77613f315c4c136909dc457d7ad027d6a917ac9fa64812416c397d54f4fa2a0ef9ea417ff2df1a8a5ea3f312af4dbed4ed63 WHIRLPOOL 5271ebeac40e1622a0f2c64993e5e81ea0f3fa709a02d5050896f43efaefce0041de31b7aec82f78e150630a637d371851e19f6a9abfdc020c44c3e6e0044075
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVV4vkACgkQCaWpQKGI+9QHWACfdbR+ZAWafvi9EE+CZYNC1R0T
-fw0An2SYAfq1TQXpGqOFz2Or/RTilBAk
-=p9lm
+iEYEAREIAAYFAlVYSFsACgkQVWmRsqeSphNo7wCcCa2Nhg1tdRc0NjUvxGRRa4rU
+uhkAn24Eq64gVAP/k7cGcNkDxtaxR+w2
+=QXbs
 -----END PGP SIGNATURE-----
