@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/hydra
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/hydra/ChangeLog,v 1.95 2015/05/15 12:13:44 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/hydra/ChangeLog,v 1.96 2015/05/17 07:50:49 jer Exp $
+
+  17 May 2015; Jeroen Roovers <jer@gentoo.org> -hydra-8.0.ebuild:
+  Old.
 
   15 May 2015; Pacho Ramos <pacho@gentoo.org> hydra-8.1.ebuild:
   ppc stable wrt bug #548390
